--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 body {
     width: 100%;
     min-height: 100vh;
-    background-color: rgb(243, 243, 243);
+    background-color: rgb(250, 250, 250);
     margin: 0;
     padding: 0;
     display: flex;
@@ -53,15 +53,17 @@ body {
     background-color: #fff;
     width: 100%;
     padding: 1.3rem 0;
-    border: 2px solid lightgrey;
+    border: 0.1rem solid lightgrey;
 }
 
 .group:nth-child(1) {
     min-height: 19rem;
+    margin-bottom: 0.5rem;
 }
 
 .instagram-logo {
     height: 3rem;
+    margin: 1rem;
 }
 
 .profile-photo {
@@ -74,4 +76,86 @@ body {
 
 .profile-photo img {
     height: 6rem;
+}
+
+.instagram-login {
+    background-color: #0095f6;
+    color: #fff;
+    padding: 5px 9px;
+    border-radius: 4px;
+    margin-top: 8%;
+}
+
+.instagram-logout {
+    color: #0095f6;
+    margin-top: 1rem;
+}
+
+.not-account {
+    color: rgb(160, 160, 160);
+}
+
+.link-blue {
+    color: #0095f6;
+}
+
+.get-the-app {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    padding: 1.3rem 0;
+}
+
+.download {
+    display: flex;
+    width: 100%;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 1rem;
+}
+
+.app-download {
+    height: 3rem;
+    width: 10rem;
+    background-size: cover;
+}
+
+.app-download:nth-child(1) {
+    background-image: url('./images/apple-button.png');
+}
+
+.app-download:nth-child(2) {
+    background-image: url('./images/googleplay-button.png');
+}
+
+/* Media Query */
+
+@media (max-width: 1240px) {
+    .instagram-wrapper {
+        width: 90%;
+    }
+}
+
+@media (max-width: 650px) {
+    
+    body {
+        background-color: #fff;
+    }
+
+    .instagram-wrapper {
+        width: 90%;
+    }
+
+    .instagram-phone {
+        display: none;
+    }
+    .instagram-continue {
+        width: 100%;
+    }
+
+    .group {
+        border: 1px solid transparent;
+    }
 }
